2021-06-27  Bruno Haible  <bruno@clisp.org>

	Avoid warnings from autoconf-2.71.
	* m4/ln.m4 (CL_PROG_HLN): Use AS_MESSAGE_LOG_FD instead of AC_FD_CC.
	* aclocal.m4: Regenerated.

2021-06-27  Bruno Haible  <bruno@clisp.org>

	Avoid warnings from autoconf-2.71.
	* src/configure.in: Invoke AC_FUNC_FORK instead of AC_FUNC_VFORK.

2021-06-27  Bruno Haible  <bruno@clisp.org>

	Avoid warnings from autoconf-2.71.
	* m4/param.m4 (CL_MACHINE): Use ac_cv_c_compiler_gnu instead of
	ac_cv_prog_gcc.
	* aclocal.m4: Regenerated.

2021-06-27  Bruno Haible  <bruno@clisp.org>

	Avoid warnings from autoconf-2.71.
	* src/configure.in: Use LT_INIT instead of libtool 1.x macro names.
	* src/configure: Regenerated.

2021-06-27  Bruno Haible  <bruno@clisp.org>

	Avoid warnings from autoconf-2.71.
	* m4/intparam.m4 (CL_INTPARAM_CROSS, CL_INTPARAM_SIZEOF): Use
	AC_COMPUTE_INT instead of _AC_COMPUTE_INT.
	* aclocal.m4: Regenerated.

2021-06-27  Bruno Haible  <bruno@clisp.org>

	Avoid warnings from autoconf-2.71.
	* m4/general.m4 (CL_MODULE_COMMON_CHECKS): Don't require AC_GNU_SOURCE,
	since it is redundant with AC_USE_SYSTEM_EXTENSIONS.
	* aclocal.m4, src/configure: Regenerated.
	* modules/*/configure: Regenerated.

2021-06-27  Bruno Haible  <bruno@clisp.org>

	Avoid warnings from autoconf-2.71.
	* m4/ioctl.m4, m4/mmap.m4, m4/mprotect.m4, m4/poll.m4, m4/proto.m4,
	m4/select.m4, m4/signal.m4: Use AC_*_IFELSE macros instead of AC_TRY_*
	macros.
	* modules/syscalls/configure.in: Likewise.
	* aclocal.m4, src/configure: Regenerated.
	* modules/*/configure: Regenerated.

2021-06-27  Bruno Haible  <bruno@clisp.org>

	Switch to autoconf-2.71.
	* m4/clisp.m4 (CL_DECOLONIZE, CL_CLISP): Expand into the initialization
	portion of the configure script. This is needed after this change in
	Autoconf:
	https://git.savannah.gnu.org/gitweb/?p=autoconf.git;a=commitdiff;h=4c59bf27d7083088290219450c81d999431b43f1
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.