@@ -1,6 +1,7 @@
 dnl -*- Autoconf -*- script for new-clx
 dnl Gilbert Baumann, 1999-10-11
 dnl Sam Steingold 2002-2009, 2011
+dnl Bruno Haible 2021
 
 AC_PREREQ([2.64])
 AC_INIT(clx/new-clx, 1.0, clisp-list)
@@ -10,7 +11,6 @@ AC_CONFIG_HEADERS(config.h)
 RSE_BOLD
 BOLD_MSG([NEW CLX])
 CL_MODULE_COMMON_CHECKS()
-AC_HEADER_TIME
 AC_CHECK_HEADERS([netdb.h netinet/in.h])
 dnl find a path to X11 - set X_LIBS and X_CFLAGS
 AC_PATH_XTRA
