@@ -1,6 +1,13 @@
 2021-06-27  Bruno Haible  <bruno@clisp.org>
 
 	Avoid warnings from autoconf-2.71.
+	* modules/clx/new-clx/configure.in: Don't invoke AC_HEADER_TIME.
+	* modules/clx/new-clx/configure, modules/clx/new-clx/config.h.in:
+	Regenerated.
+
+2021-06-27  Bruno Haible  <bruno@clisp.org>
+
+	Avoid warnings from autoconf-2.71.
 	* m4/ln.m4 (CL_PROG_HLN): Use AS_MESSAGE_LOG_FD instead of AC_FD_CC.
 	* aclocal.m4: Regenerated.
 
